objects/PersonLifeEvent.object
<CustomObject>
    <fields>
        <fullName>AW_ClientCommunityIcon__c</fullName>
        <description>Used to calculate lightning icon to display on community based on event type.</description>
        <formula>CASE
    (
        EventType, 
        &quot;Birth&quot;, &quot;standard:people&quot;, 
        &quot;Car&quot;, &quot;custom:custom31&quot;,
        &quot;Graduation&quot;, &quot;standard:reward&quot;,
        &quot;Job&quot;, &quot;standard:case&quot;,
        &quot;Marriage&quot;, &quot;custom:custom1&quot;,
        &quot;Relocation&quot;, &quot;custom:custom106&quot;,
        &quot;Home&quot;, &quot;standard:home&quot;,
        &quot;Baby&quot;, &quot;standard:bot&quot;,
        &quot;Diagnosis&quot;, &quot;standard:feed&quot;,
        &quot;Retirement&quot;, &quot;standard:goals&quot;,
        &quot;standard:lightning_component&quot;
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Community Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_EstimatedValue__c</fullName>
        <description>Estimated Value of the event</description>
        <label>Estimated value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_ImpactOnOutcomeGoals__c</fullName>
        <description>What is the outcome of this event on the goals?</description>
        <label>Impact on outcome/goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AW_Impact__c</fullName>
        <description>Please select impact</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(PrimaryPerson.Account.FinServ__Status__c, &apos;Active&apos;), NOT(ISNULL( PrimaryPerson.Account.AW_ParentAccount__r.Id))), PrimaryPerson.Account.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Person Life Events (MasterAccount)</relationshipLabel>
        <relationshipName>AW_PersonLifeEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_MomentTypeFinancial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this event of Moment Type?</description>
        <label>Moment type (Financial)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_NextRecurringDate__c</fullName>
        <description>Next Recurring Date</description>
        <formula>TEXT(AW_RecurringDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When the next event anniversary will take place.</inlineHelpText>
        <label>Next Recurring Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_OtherEventType__c</fullName>
        <description>Capture event type if not in picklist</description>
        <label>Other Event Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(PrimaryPerson.Account.Id)),PrimaryPerson.Account.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PrimaryPersonOwnerId__c</fullName>
        <description>Owner ID of Primary Person</description>
        <formula>PrimaryPerson.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Person Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PriorityLevel__c</fullName>
        <description>Select Priority Level</description>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RecurringDate__c</fullName>
        <description>When the next event date will occur.</description>
        <label>Recurring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can select if event should be recurring.</description>
        <inlineHelpText>Event will be recurred annually.</inlineHelpText>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_SortingDate__c</fullName>
        <description>Used by lightning component to sort life events and goals</description>
        <formula>DATEVALUE(EventDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sorting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_VisibleToClient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this event visible to client?</description>
        <label>Visible to client</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_PersonLifeEvents</fullName>
        <filterScope>Everything</filterScope>
        <label>All Person Life Events</label>
    </listViews>
    <listViews>
        <fullName>All_PersonLifeEvents</fullName>
        <columns>Name</columns>
        <columns>EventType</columns>
        <columns>PrimaryPerson</columns>
        <columns>EventDate</columns>
        <columns>IsTentative</columns>
        <filterScope>Everything</filterScope>
        <label>All Person Life Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AW_EventTypeNotOther</fullName>
        <active>true</active>
        <description>To check if &quot;Other Event Type&quot; is not populated if &quot;Other&quot; event type has not been selected</description>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL( EventType , &apos;AW_Other&apos;)), 
NOT(ISBLANK( AW_OtherEventType__c ))
)</errorConditionFormula>
        <errorDisplayField>AW_OtherEventType__c</errorDisplayField>
        <errorMessage>Please select &quot;Other&quot; under Event Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_Financial_Moment_Type_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 AW_MomentTypeFinancial__c=true,
 ISBLANK(AW_EstimatedValue__c)
)</errorConditionFormula>
        <errorDisplayField>AW_EstimatedValue__c</errorDisplayField>
        <errorMessage>Financial Moment type is selected, please provide the value in field &apos;Estimated Value&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_OtherEventTypeRequired</fullName>
        <active>true</active>
        <description>When Other is selected in Event Type field, the Other Event Type should not be left blank.</description>
        <errorConditionFormula>AND( 
     ISPICKVAL(   EventType , &apos;AW_Other&apos;), 
     ISBLANK(   AW_OtherEventType__c )
   )</errorConditionFormula>
        <errorDisplayField>AW_OtherEventType__c</errorDisplayField>
        <errorMessage>Please enter Other Event Type</errorMessage>
    </validationRules>
</CustomObject>